--- a/frappe/templates/includes/meta_block.html
+++ b/frappe/templates/includes/meta_block.html
@@ -1,8 +1,8 @@
 {%- if metatags -%}
 {%- for name in metatags %}
 {%- set content = metatags.get(name, '') -%}
-{%- if content -%}
-<meta {% if name.startswith('og:') %}property="{{ name }}"{% else %}name="{{ name }}"{% endif %} content="{{ content | striptags | escape }}">
-{%- endif -%}
+{%- if content %}
+	<meta {% if name.startswith('og:') %}property="{{ name }}"{% else %}name="{{ name }}"{% endif %} content="{{ content | striptags | escape }}">
+{%- endif %}
 {%- endfor -%}
 {%- endif -%}
