--- a/frappe/public/scss/desk/form.scss
+++ b/frappe/public/scss/desk/form.scss
@@ -40,7 +40,7 @@
 	.section-body {
 		width: 100%;
 		@extend .row;
-		margin: 0;
+		margin: 0 0 0.3rem;
 		&:first-child {
 			margin-top: var(--margin-sm);
 		}
@@ -84,7 +84,7 @@
 }
 
 .control-label {
-	margin-bottom: var(--margin-xs);
+	margin-bottom: 0.2rem;
 	font-weight: normal;
 }
 
@@ -297,6 +297,8 @@
 }
 
 .form-group {
+	margin-bottom: 0.6rem;
+
 	&.frappe-control:last-child {
 		margin-bottom: 0;
 	}
