--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -145,6 +145,7 @@ $input-height: 28px !default;
 	--btn-shadow: var(--shadow-xs);
 
 	// Type Colors
+	--text-faded: var(--gray-500);
 	--text-muted: var(--gray-700);
 	--text-light: var(--gray-800);
 	--text-color: var(--gray-900);
@@ -162,7 +163,7 @@ $input-height: 28px !default;
 	--bg-green: var(--dark-green-50);
 	--bg-yellow: var(--yellow-50);
 	--bg-orange: var(--orange-50);
-	--bg-red: var(--red-50);
+	--bg-red: var(--red-100);
 	--bg-gray: var(--gray-200);
 	--bg-light-gray: var(--gray-100);
 	--bg-purple: var(--purple-100);
@@ -180,17 +181,32 @@ $input-height: 28px !default;
 	--text-3xl: 22px;
 
 	--text-on-blue: var(--blue-700);
-	--text-on-light-blue: var(--blue-600);
+	--text-on-light-blue: var(--blue-500);
 	--text-on-dark-blue: var(--blue-800);
-	--text-on-green: var(--dark-green-700);
-	--text-on-yellow: var(--yellow-400);
+	--text-on-green: var(--dark-green-800);
+	--text-on-yellow: var(--yellow-600);
 	--text-on-orange: var(--orange-600);
 	--text-on-red: var(--red-600);
-	--text-on-gray: var(--gray-600);
+	--text-on-gray: var(--gray-900);
 	--text-on-light-gray: var(--gray-800);
 	--text-on-purple: var(--purple-700);
 	--text-on-pink: var(--pink-600);
 	--text-on-cyan: var(--cyan-800);
+
+	--indicator-blue: var(--blue-600);
+	--indicator-light-blue: var(--blue-300);
+	--indicator-dark-blue: var(--blue-800);
+	--indicator-green: var(--green-600);
+	--indicator-yellow: var(--yellow-200);
+	--indicator-orange: var(--orange-500);
+	--indicator-red: var(--red-500);
+	--indicator-gray: var(--gray-500);
+	--indicator-light-gray: var(--gray-300);
+	--indicator-purple: var(--purple-700);
+	--indicator-pink: var(--pink-600);
+	--indicator-cyan: var(--cyan-800);
+
+	--indicator-red-bg: var(--red-100);
 
 	// alert colors
 	--alert-text-danger: var(--red-600);
@@ -208,7 +224,7 @@ $input-height: 28px !default;
 	--navbar-bg: white;
 	--fg-hover-color: var(--gray-100);
 	--card-bg: var(--fg-color);
-	--disabled-text-color: var(--gray-700);
+	--disabled-text-color: var(--gray-800);
 	--disabled-control-bg: var(--gray-50);
 	--control-bg: var(--gray-100);
 	--control-bg-on-gray: var(--gray-200);
