--- a/frappe/public/scss/common/form.scss
+++ b/frappe/public/scss/common/form.scss
@@ -2,6 +2,7 @@
 	border: none;
 	font-size: var(--text-md);
 	position: relative;
+	height: auto;
 }
 
 .form-control.bold {
@@ -13,7 +14,7 @@
 		font-weight: normal;
 		font-size: var(--text-sm);
 	}
-	min-height: var(--input-height);
+	// min-height: var(--input-height);
 	border-radius: $border-radius;
 	font-weight: 400;
 	padding: 6px 12px;
