--- a/frappe/public/scss/desk/page.scss
+++ b/frappe/public/scss/desk/page.scss
@@ -33,7 +33,7 @@
 			max-width: 500px;
 		}
 		.indicator-pill {
-			margin-top: 2px;
+			// margin-top: 2px;
 		}
 		.sub-heading {
 			font-size: var(--text-sm);
