--- a/frappe/public/scss/desk/desktop.scss
+++ b/frappe/public/scss/desk/desktop.scss
@@ -207,8 +207,9 @@ body {
 
 	// Overrides for each widgets
 	&.dashboard-widget-box {
+		box-shadow: var(--shadow-sm);
 		min-height: 240px;
-		padding: var(--padding-md) var(--padding-lg);
+		padding: var(--padding-xs);
 
 		.filter-chart {
 			background-color: var(--control-bg);
@@ -529,7 +530,11 @@ body {
 	}
 
 	&.shortcut-widget-box {
+		justify-content: center;
 		cursor: pointer;
+		box-shadow: var(--shadow-base);
+
+		padding: 10px;
 
 		&:hover {
 			.widget-title {
@@ -554,6 +559,7 @@ body {
 
 	&.links-widget-box {
 		padding: 18px 12px;
+		box-shadow: var(--shadow-sm);
 
 		.link-item {
 			display: flex;
