--- a/frappe/public/scss/desk/desktop.scss
+++ b/frappe/public/scss/desk/desktop.scss
@@ -94,7 +94,7 @@ body {
 		}
 
 		.grid-col-2 {
-			grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+			grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 			.full-width {
 				grid-column-start: 1;
 				grid-column-end: 2;
@@ -217,6 +217,9 @@ body {
 
 		.btn-xs {
 			box-shadow: none;
+			min-width: max-content;
+			font-size: 12px;
+			padding: 4px 6px;
 		}
 
 		.chart-actions {
@@ -237,20 +240,17 @@ body {
 
 		.widget-head {
 			padding: var(--padding-sm);
-			position: relative;
-			@media (max-width: 1300px) {
-				display: grid;
-			}
+			display: flex;
+			justify-content: space-between;
+			flex-wrap: wrap;
+			gap: 6px;
 		}
 
 		.widget-control {
-			position: inherit;
-			right: var(--margin-sm);
-			top: var(--padding-sm);
-			@media (min-width: 1300px) {
-				top: auto;
-			}
-
+			display: flex;
+			align-items: center;
+			flex: 1;
+			font-size: 10px;
 		}
 
 		.chart-loading-state {
