fix: More styling

--- a/frappe/public/scss/desk/filters.scss
+++ b/frappe/public/scss/desk/filters.scss
@@ -21,7 +21,7 @@
 
 		.remove-filter {
 			cursor: pointer;
-			line-height: 2;
+			// line-height: 2;
 		}
 
 		.filter-field {
@@ -56,9 +56,9 @@
 			cursor: pointer;
 		}
 
-		.btn {
-			box-shadow: none;
-		}
+		//.btn {
+		//	box-shadow: none;
+		//}
 	}
 
 	.divider {
