--- a/frappe/public/scss/desk/report.scss
+++ b/frappe/public/scss/desk/report.scss
@@ -4,12 +4,12 @@
 		position: unset;
 	}
 
-	.page-form {
-		.form-group {
-			padding: 0px var(--padding-sm);
-			margin: var(--margin-sm) 0px;
-		}
-	}
+	//.page-form {
+	//	.form-group {
+	//		padding: 0px var(--padding-sm);
+	//		margin: var(--margin-sm) 0px;
+	//	}
+	//}
 }
 
 // grid report
