fix: Buttons and shortcuts

--- a/frappe/public/scss/desk/global.scss
+++ b/frappe/public/scss/desk/global.scss
@@ -134,7 +134,7 @@ pre {
 }
 
 .visible-xs {
-	@include media-breakpoint-up(sm) {
+	@include media-breakpoint-up(md) {
 		display: none !important;
 	}
 }
