fix: More styling

--- a/frappe/public/scss/common/modal.scss
+++ b/frappe/public/scss/common/modal.scss
@@ -37,7 +37,7 @@ body.modal-open[style^="padding-right"] {
 		top: 0;
 		z-index: 3;
 		background: inherit;
-		padding: var(--padding-md) var(--padding-lg);
+		padding: var(--padding-sm) var(--padding-lg);
 		// padding-bottom: 0;
 		border-bottom: 1px solid var(--border-color);
 
