--- a/frappe/public/scss/desk/form.scss
+++ b/frappe/public/scss/desk/form.scss
@@ -148,7 +148,7 @@
 			font-size: var(--text-sm);
 			padding: var(--padding-xs) var(--padding-sm);
 			border-radius: var(--border-radius);
-			background-color: var(--control-bg);
+			background-color: var(--gray-200);
 			.count {
 				font-size: var(--text-xs);
 				background-color: var(--gray-500);
