--- a/frappe/public/scss/desk/report.scss
+++ b/frappe/public/scss/desk/report.scss
@@ -85,6 +85,7 @@
 }
 
 .report-wrapper {
+	padding: 0 var(--padding-xs);
 	overflow: auto;
 }
 
@@ -245,6 +246,12 @@
 	border-top: 1px solid var(--border-color);
 	font-size: var(--text-sm);
 	padding: var(--padding-sm) 0;
+
+	.report-footer-items {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
 }
 
 .tree-footer {
