--- a/frappe/public/scss/login.bundle.scss
+++ b/frappe/public/scss/login.bundle.scss
@@ -56,7 +56,7 @@ body {
 			input[type="text"],
 			input[type="email"],
 			input[type="password"] {
-				border: none;
+				border: 1px solid var(--control-border);
 				color: var(--text-color);
 				font-size: var(--text-base);
 				background-color: var(--control-bg);
