--- a/frappe/public/scss/website/footer.scss
+++ b/frappe/public/scss/website/footer.scss
@@ -7,13 +7,13 @@
 
 .footer-logo {
 	min-width: 5rem;
-	height: 1.5rem;
+	// height: 1.5rem;
 	object-fit: contain;
 	object-position: left;
 }
 
 .footer-child-item {
-	margin-top: 0.5rem;
+	// margin-top: 0.5rem;
 }
 
 .footer-link, .footer-child-item a {
