--- a/frappe/public/scss/common/form.scss
+++ b/frappe/public/scss/common/form.scss
@@ -16,7 +16,7 @@
 	min-height: var(--input-height);
 	border-radius: $border-radius;
 	font-weight: 400;
-	padding: 6px 12px;
+	padding: 7px 12px 5px 12px;
 	cursor: default;
 	color: var(--disabled-text-color);
 	background-color: var(--disabled-control-bg);
