fix:styling issues (my account page).

--- a/frappe/templates/includes/list/list.html
+++ b/frappe/templates/includes/list/list.html
@@ -2,7 +2,7 @@
 <h4 class="text-muted">{{ sub_title }}</h4>
 {% endif %}
 {% if not result -%}
-	<div class="empty-apps-state">
+	<div class="empty-apps-state container">
 		<img class="empty-list-icon" src="/assets/frappe/images/ui-states/list-empty-state.svg"/>
 		<div class="mt-4">{{ no_result_message or _("Nothing to show") }}</div>
 	</div>
