--- a/frappe/website/doctype/web_form/templates/web_form.html
+++ b/frappe/website/doctype/web_form/templates/web_form.html
@@ -41,7 +41,7 @@
 
 {% block page_content %}
 	<!-- web form container -->
-	<div class="web-form-container">
+	<div class="web-form-container container">
 		<!-- breadcrumb -->
 		{% if not banner_image and has_header and login_required and show_list %}
 			{% include "templates/includes/breadcrumbs.html" %}
@@ -55,7 +55,7 @@
 				{% include "templates/includes/breadcrumbs.html" %}
 			{% endif %}
 			<div class="web-form-head">
-				<div class="title">
+				<div class="title d-flex justify-content-between">
 					<div class="web-form-title ellipsis">
 						{% if show_list and not is_new %}
 							<h1 class="ellipsis">{{ _(web_form_title) }}</h1>
@@ -92,7 +92,7 @@
 		<!-- attachments -->
 		{% if show_attachments and not is_new and attachments %}
 			<div class="attachments">
-				<h5 class="mb-3">{{ _("Attachments") }}</h5>
+				<h5 class="mb-6">{{ _("Attachments") }}</h5>
 				{% for attachment in attachments %}
 					<a class="attachment attachment-link" href="{{ attachment.file_url }}" target="blank">
 						<div class="file-name ellipsis">
