fix:portal changes

--- a/frappe/public/scss/website/web_form.scss
+++ b/frappe/public/scss/website/web_form.scss
@@ -2,7 +2,7 @@
 
 [data-doctype="Web Form"] {
 	.page-content-wrapper {
-		.container {
+
 			.page-header {
 				width: 100%;
 
@@ -16,7 +16,6 @@
 			}
 
 			.page_content {
-				max-width: 800px;
 				margin: auto;
 
 				h1 {
@@ -27,12 +26,10 @@
 				}
 
 				.web-form-header {
-					border: 1px solid var(--dark-border-color);
 					border-bottom: none;
 					border-top-left-radius: var(--border-radius-md);
 					border-top-right-radius: var(--border-radius-md);
 					background-color: var(--fg-color);
-					padding: 2rem 2rem 0;
 
 					.breadcrumb-container {
 						padding: 0px;
@@ -44,7 +41,7 @@
 					}
 
 					.web-form-head {
-						border-bottom: 1px solid var(--dark-border-color);
+						// border-bottom: 1px solid var(--dark-border-color);
 						padding-bottom: 1.25rem;
 
 						.title {
@@ -86,8 +83,7 @@
 
 				.web-form {
 					background-color: var(--fg-color);
-					padding: 1.25rem 2rem 2rem;
-					border: 1px solid var(--dark-border-color);
+					// padding: 1.25rem 2rem 2rem;
 					border-top: none;
 					border-bottom-left-radius: var(--border-radius);
 					border-bottom-right-radius: var(--border-radius);
@@ -209,8 +205,8 @@
 							}
 
 							.left-area {
-								display: flex;
-								flex: 1;
+								// display: flex;
+								// flex: 1;
 
 								@include media-breakpoint-down(sm) {
 									order: 1
@@ -295,7 +291,7 @@
 
 							.right-area {
 								display: flex;
-								justify-content: flex-end;
+								// justify-content: flex-end;
 								flex: 1;
 
 								@include media-breakpoint-down(sm) {
@@ -370,17 +366,13 @@
 				}
 
 				.web-list-container {
-					min-height: 470px;
-					border: 1px solid var(--dark-border-color);
-					border-radius: var(--border-radius-md);
-					padding: 2rem;
 
 					.web-list-header {
 						display: flex;
 						justify-content: space-between;
 						flex-wrap: wrap;
 						gap: 1rem;
-						border-bottom: 1px solid var(--dark-border-color);
+						// border-bottom: 1px solid var(--dark-border-color);
 						padding-bottom: 1.25rem;
 
 						.web-list-actions {
@@ -414,7 +406,7 @@
 							}
 
 							.input-xs {
-								height: 28px;
+								// height: 28px;
 								line-height: 1.2;
 							}
 						}
@@ -428,17 +420,18 @@
 							border-top: 1px solid var(--border-color);
 
 							thead tr {
-								th {
-									border: 0;
-									font-size: 13px;
-									font-weight: normal;
-									color: var(--text-muted);
+								border-bottom: 2px solid var(--border-color);
+								border-top: 2px solid var(--border-color);
+									th {
+										border: 0;
+										font-weight: bold;
+										color: var(--heading-color);
 
-									input[type="checkbox"] {
-										margin-bottom: -2px;
+										input[type="checkbox"] {
+											margin-bottom: -2px;
+										}
 									}
 								}
-							}
 
 							tbody tr {
 								color: var(--text-color);
@@ -448,6 +441,7 @@
 									font-size: 13px;
 									border-top: 1px solid var(--border-color);
 									max-width: 160px;
+									padding-bottom: 1.5rem;
 
 									.ql-editor, p {
 										width: max-content;
@@ -460,19 +454,23 @@
 										}
 									}
 								}
+								&:hover {
+									cursor: pointer;
+									background-color: var(--gray-100);
+								}
 							}
 
 							input[type="checkbox"] {
 								margin-top: 2px;
 							}
 
-							.list-col-checkbox {
-								width: 1rem;
-							}
+							// .list-col-checkbox {
+							// 	width: 1rem;
+							// }
 
-							.list-col-serial {
-								width: 1.5rem;
-							}
+							// .list-col-serial {
+							// 	width: 1.5rem;
+							// }
 						}
 
 						.no-result {
@@ -502,6 +500,5 @@
 				padding-left: 0;
 				padding-right: 0;
 			}
-		}
 	}
 }
