--- a/frappe/website/doctype/web_form/templates/web_form.html
+++ b/frappe/website/doctype/web_form/templates/web_form.html
@@ -107,7 +107,7 @@
 
 		<!-- comments -->
 		{% if allow_comments and not is_new and not is_list -%}
-			<div class="comments">
+			<div class="comments mt-12">
 				<h3>{{ _("Comments") }}</h3>
 				{% include 'templates/includes/comments/comments.html' %}
 			</div>
