--- a/frappe/website/doctype/web_form/templates/web_list.html
+++ b/frappe/website/doctype/web_form/templates/web_list.html
@@ -16,7 +16,7 @@
 				{%- endif -%}
 			</div>
 		</div>
-		<div class="web-list-filters row hide"></div>
+		<div class="web-list-filters row"></div>
 		<div class="web-list-table"></div>
 		<div class="web-list-footer"></div>
 	</div>
