--- a/frappe/public/scss/website/sidebar.scss
+++ b/frappe/public/scss/website/sidebar.scss
@@ -1,7 +1,10 @@
 .web-sidebar {
 	padding-top: 2rem;
+	padding-bottom: 2rem;
 	position: sticky;
 	top: 0;
+	margin-left: -30px;
+	margin-right: 30px;
 }
 
 .sidebar-item a {
