fix:portal changes #2

--- a/frappe/public/scss/website/index.scss
+++ b/frappe/public/scss/website/index.scss
@@ -109,8 +109,12 @@
 	color: $light;
 }
 
-.main-column .page-content-wrapper {
-	margin: 2rem 0;
+.main-column {
+	background-color: var(--bg-color);
+
+	.page-content-wrapper {
+		margin: 3rem 0;
+	}
 }
 
 @media (max-width: map-get($grid-breakpoints, "lg")) {
@@ -179,7 +183,7 @@ a.card {
 }
 
 .text-extra-muted {
-	color: var(--gray-500) !important;
+	color: var(--gray-500);
 }
 
 .no-underline {
