--- a/frappe/website/doctype/web_form/templates/web_form.html
+++ b/frappe/website/doctype/web_form/templates/web_form.html
@@ -40,40 +40,40 @@
 {% endmacro %}
 
 {% block page_content %}
+
+	<!-- header -->
+	<div class="web-form-header">
+		{% if banner_image and has_header and login_required and show_list %}
+			{% include "templates/includes/breadcrumbs.html" %}
+		{% endif %}
+		<div class="web-form-head">
+			<div class="title d-flex justify-content-between">
+				<div class="web-form-title ellipsis">
+					{% if show_list and not is_new %}
+						<h1 class="ellipsis">{{ _(web_form_title) }}</h1>
+						<p class="ellipsis">{{ _(title) }}</p>
+					{% else %}
+						<h1 class="ellipsis">{{ _(title) }}</h1>
+					{% endif %}
+				</div>
+				<span class="indicator-pill orange hide">Not Saved</span>
+				<div class="web-form-actions">
+					{{ header_buttons() }}
+				</div>
+			</div>
+			{% if introduction_text and (is_new or in_edit_mode)  %}
+				<div class="web-form-introduction">{{ introduction_text }}</div>
+			{% endif %}
+		</div>
+	</div>
 	<!-- web form container -->
-	<div class="web-form-container container">
+	<div class="web-form-container card">
 		<!-- breadcrumb -->
 		{% if not banner_image and has_header and login_required and show_list %}
 			{% include "templates/includes/breadcrumbs.html" %}
 			{% else %}
-				<div style="height: 3rem"></div>
+				<div style="padding: 0.5rem"></div>
 		{% endif %}
-
-		<!-- header -->
-		<div class="web-form-header">
-			{% if banner_image and has_header and login_required and show_list %}
-				{% include "templates/includes/breadcrumbs.html" %}
-			{% endif %}
-			<div class="web-form-head">
-				<div class="title d-flex justify-content-between">
-					<div class="web-form-title ellipsis">
-						{% if show_list and not is_new %}
-							<h1 class="ellipsis">{{ _(web_form_title) }}</h1>
-							<p class="ellipsis">{{ _(title) }}</p>
-						{% else %}
-							<h1 class="ellipsis">{{ _(title) }}</h1>
-						{% endif %}
-					</div>
-					<span class="indicator-pill orange hide">Not Saved</span>
-					<div class="web-form-actions">
-						{{ header_buttons() }}
-					</div>
-				</div>
-				{% if introduction_text and (is_new or in_edit_mode)  %}
-					<div class="web-form-introduction">{{ introduction_text }}</div>
-				{% endif %}
-			</div>
-		</div>
 
 		<!-- main card -->
 		<form role="form" class="web-form">
@@ -112,7 +112,7 @@
 				{% include 'templates/includes/comments/comments.html' %}
 			</div>
 		{%- else -%}
-			<div style="height: 3rem"></div>
+			<div style="padding: 0.5rem"></div>
 		{%- endif %} {# comments #}
 	</div>
 
