--- a/frappe/website/doctype/web_form/templates/web_list.html
+++ b/frappe/website/doctype/web_form/templates/web_list.html
@@ -3,20 +3,21 @@
 {% block breadcrumbs %}{% endblock %}
 
 {% block page_content %}
-	<!-- main card -->
-	<div class="web-list-container">
-		<!-- list -->
-		<div class="web-list-header d-flex justify-content-between align-items-center">
-			<div class="web-list-title ellipsis">
-				<h1 class="ellipsis">{{ _(list_title or title) }}</h1>
-			</div>
-			<div class="web-list-actions">
-				{%- if allow_multiple -%}
-					<a class="btn btn-primary btn-sm button-new" href="/{{ route }}/new">New</a>
-				{%- endif -%}
-			</div>
+	<!-- main card header-->
+	<div class="web-list-header">
+		<div class="web-list-title ellipsis">
+			<h1 class="ellipsis">{{ _(list_title or title) }}</h1>
 		</div>
-		<div class="web-list-filters row"></div>
+		<div class="web-list-actions">
+			{%- if allow_multiple -%}
+				<a class="btn btn-primary btn-sm button-new" href="/{{ route }}/new">New</a>
+			{%- endif -%}
+		</div>
+	</div>
+	<!-- main card -->
+	<div class="web-list-container card">
+		<!-- list -->
+		<div class="web-list-filters row hide"></div>
 		<div class="web-list-table"></div>
 		<div class="web-list-footer"></div>
 	</div>
