--- a/frappe/public/scss/website/sidebar.scss
+++ b/frappe/public/scss/website/sidebar.scss
@@ -6,25 +6,26 @@
 }
 
 .sidebar-items {
-	background-color: var(--fg-color);
-	box-shadow: var(--shadow-base);
+	ul, ol {
+		background-color: var(--fg-color);
+		box-shadow: var(--shadow-base);
+		border-radius: 0.375rem;
+	}
 
 	li {
 		&:hover{
 			color: $gray-900;
 			background-color: var(--gray-100);
 		}
+		@include transition();
 	}
 }
 
 .sidebar-item {
-	padding: 0.4rem;
 	border-bottom: 1px solid var(--gray-200);
 	a {
 		display: block;
-		padding: 0.25rem 0.5rem;
-		margin-top: 0.25rem;
-		border-radius: 0.375rem;
+		padding: 0.5rem 0.4rem;
 		font-size: $font-size-sm;
 		text-align: center;
 		color: var(--text-color);
@@ -40,7 +41,8 @@
 }
 
 .sidebar-item a.active {
-	color: var(--primary) !important;
+	color: var(--primary);
+	background-color: var(--primary-light);
 }
 
 .sidebar-item-icon {
