--- a/frappe/website/doctype/web_form/templates/web_list.html
+++ b/frappe/website/doctype/web_form/templates/web_list.html
@@ -17,9 +17,9 @@
 	<!-- main card -->
 	<div class="web-list-container card">
 		<!-- list -->
-		<div class="web-list-filters row hide"></div>
+		<div class="web-list-filters hide"></div>
 		<div class="web-list-table"></div>
-		<div class="web-list-footer"></div>
+		<div class="web-list-footer hide"></div>
 	</div>
 {% endblock page_content %}
 
