--- a/frappe/public/scss/website/web_form.scss
+++ b/frappe/public/scss/website/web_form.scss
@@ -25,17 +25,11 @@
 					padding-bottom: 2px;
 				}
 
-				.web-form-container {
-					box-shadow: var(--card-shadow);
-					border-radius: var(--border-radius-md);
-					padding: var(--padding-sm) 25px;
-				}
-
 				.web-form-header {
 
 					.breadcrumb-container {
 						padding: 0px;
-						margin: 0 0 2rem;
+						margin: 0 0 1rem;
 
 						ol.breadcrumb {
 							padding: 0px;
@@ -85,7 +79,6 @@
 
 				.web-form {
 					background-color: var(--fg-color);
-					// padding: 1.25rem 2rem 2rem;
 					border-top: none;
 					border-bottom-left-radius: var(--border-radius);
 					border-bottom-right-radius: var(--border-radius);
@@ -324,6 +317,12 @@
 							}
 						}
 					}
+				}
+
+				.web-form, .attachments {
+					box-shadow: var(--card-shadow);
+					border-radius: var(--border-radius-md);
+					padding: var(--padding-lg);
 				}
 
 				.success-page {
