--- a/frappe/website/doctype/web_form/templates/web_form.html
+++ b/frappe/website/doctype/web_form/templates/web_form.html
@@ -43,7 +43,7 @@
 
 	<!-- header -->
 	<div class="web-form-header">
-		{% if banner_image and has_header and login_required and show_list %}
+		{% if has_header and login_required and show_list %}
 			{% include "templates/includes/breadcrumbs.html" %}
 		{% endif %}
 		<div class="web-form-head">
@@ -51,7 +51,6 @@
 				<div class="web-form-title ellipsis">
 					{% if show_list and not is_new %}
 						<h1 class="ellipsis">{{ _(web_form_title) }}</h1>
-						<p class="ellipsis">{{ _(title) }}</p>
 					{% else %}
 						<h1 class="ellipsis">{{ _(title) }}</h1>
 					{% endif %}
@@ -67,16 +66,9 @@
 		</div>
 	</div>
 	<!-- web form container -->
-	<div class="web-form-container card">
-		<!-- breadcrumb -->
-		{% if not banner_image and has_header and login_required and show_list %}
-			{% include "templates/includes/breadcrumbs.html" %}
-			{% else %}
-				<div style="padding: 0.5rem"></div>
-		{% endif %}
-
+	<div class="web-form-container">
 		<!-- main card -->
-		<form role="form" class="web-form">
+		<form role="form" class="web-form card">
 			<div class="web-form-body">
 				<div class="web-form-wrapper">
 					{% include "website/doctype/web_form/templates/web_form_skeleton.html" %}
@@ -91,7 +83,7 @@
 
 		<!-- attachments -->
 		{% if show_attachments and not is_new and attachments %}
-			<div class="attachments">
+			<div class="attachments card">
 				<h5 class="mb-6">{{ _("Attachments") }}</h5>
 				{% for attachment in attachments %}
 					<a class="attachment attachment-link" href="{{ attachment.file_url }}" target="blank">
@@ -107,7 +99,7 @@
 
 		<!-- comments -->
 		{% if allow_comments and not is_new and not is_list -%}
-			<div class="comments mt-12">
+			<div class="comments mt-5">
 				<h3>{{ _("Comments") }}</h3>
 				{% include 'templates/includes/comments/comments.html' %}
 			</div>
