fix: darken awesomplete hover bg

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -235,7 +235,7 @@ $input-height: calc(1.5em + 0.75rem);
 	--toast-bg: var(--modal-bg);
 	--popover-bg: white;
 
-	--awesomplete-hover-bg: var(--control-bg);
+	--awesomplete-hover-bg: var(--gray-150);
 
 	// Button Colors
 	--btn-default-bg: var(--gray-100);
