feat: Primary color to #0060FF

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -267,7 +267,7 @@ $input-height: calc(1.5em + 0.75rem);
 	--border-radius-lg: 12px;
 	--border-radius-full: 999px;
 
-	--primary-color: #2490EF;
+	--primary-color: #0060FF;
 	--btn-height: 30px;
 
 	// input
