--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -278,7 +278,7 @@ $input-height: calc(1.5em + 0.75rem);
 	--checkbox-right-margin: var(--margin-xs);
 	--checkbox-size: 14px;
 	--checkbox-focus-shadow: 0 0 0 2px var(--gray-300);
-	--checkbox-gradient: linear-gradient(180deg, #4AC3F8 -124.51%, var(--primary) 100%);
+	--checkbox-gradient: linear-gradient(180deg, #4AC3F8 -124.51%, var(--blue-500) 100%);
 
 	// "diff" colors
 	--diff-added: var(--green-100);
