--- a/frappe/public/scss/element/checkbox.scss
+++ b/frappe/public/scss/element/checkbox.scss
@@ -25,7 +25,7 @@ input[type="checkbox"] {
 	}
 
 	&:checked {
-		background-color: var(--primary);
+		background-color: var(--blue-500);
 		background-image: $check-icon, var(--checkbox-gradient);
 		background-size: 57%, 100%;
 		box-shadow: none;
